@@ -225,11 +225,14 @@ BEGIN
     "6",            ID_VIEW_200,            VIRTKEY, CONTROL, NOINVERT
     "2",            ID_VIEW_50,             VIRTKEY, CONTROL, NOINVERT
     "3",            ID_VIEW_75,             VIRTKEY, CONTROL, NOINVERT
-    "E",            ID_VIEW_GRAPHEVENTS,    VIRTKEY, CONTROL, NOINVERT
-    "T",            ID_VIEW_TEXTINFORMATION, VIRTKEY, CONTROL, NOINVERT
-    "+",            ID_VIEW_INCREASEZOOMLEVEL, ASCII, NOINVERT
     "-",            ID_VIEW_DECREASEZOOMLEVEL, ASCII, NOINVERT
+    "E",            ID_VIEW_GRAPHEVENTS,    VIRTKEY, CONTROL, NOINVERT
+    "+",            ID_VIEW_INCREASEZOOMLEVEL, ASCII, NOINVERT
     "=",            ID_VIEW_INCREASEZOOMLEVEL, ASCII, NOINVERT
+    "T",            ID_VIEW_TEXTINFORMATION, VIRTKEY, CONTROL, NOINVERT
+    VK_RIGHT,       ID_BUTTON_STEP,         VIRTKEY, NOINVERT
+    VK_ESCAPE,      ID_BUTTON_STOP,         VIRTKEY, NOINVERT
+    VK_SPACE,       ID_BUTTON_PLAYPAUSE,    VIRTKEY, NOINVERT
 END
 
 
