@@ -124,13 +124,14 @@
 #define IDC_OPTIONS_DIRECT              32836
 #define ID_OPTIONS_DIRECT               32837
 #define ID_BUTTON_STEP                  32838
+#define ID_BUTTON_PLAYPAUSE             32841
 
 // Next default values for new objects
 // 
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        148
-#define _APS_NEXT_COMMAND_VALUE         32839
+#define _APS_NEXT_COMMAND_VALUE         32843
 #define _APS_NEXT_CONTROL_VALUE         1034
 #define _APS_NEXT_SYMED_VALUE           101
 #endif
